[project]
name = "kymotools"
version = "0.4.0"
authors = [
  { name="Stephen Cross", email="stephen.cross@bristol.ac.uk" },
]
description = "Scripts for kymograph processing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pylake>=0.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["kymo", "kymograph"]

[project.urls]
Homepage = "https://github.com/sjcross/kymotools"
Issues = "https://github.com/sjcross/kymotools/issues"
Repository = "https://github.com/sjcross/kymotools.git"

[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"